# EHentaiGallery

./: README.md  pyproject.toml
backend/: api.py  config.toml  eh_config.py  eh_error.py  eh_http.py  gallery.py  main.py  parse.py  search_response.html
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/assets/: base.css
