[project]
name = "ehentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.2",
]
